--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 </head>
 <body>
 
+	<div id="container">
+		<h1>To-Do List</h1>
+		<input type="text">
+		<ul>
+			<li><span>X</span> Go to class</li>
+			<li><span>X</span> Play CSGO</li>
+			<li><span>X</span> Takeout</li>
+		</ul>
+	</div>
 
-	<script type="text/javascript" src="asses/JS/todos.js"></script>
+	<script type="text/javascript" src="assets/JS/todos.js"></script>
 </body>
 </html>
