--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 	<title>Todo List</title>
 	<link rel="stylesheet" type="text/css" href="assets/CSS/todos.css">
 	<script type="text/javascript" src="assets/JS/lib/jquery-3.5.1.min.js"></script>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/CSS/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
 	<div id="container">
-		<h1>To-Do List</h1>
-		<input type="text">
+		<h1>To-Do List <i class="fa fa-plus" aria-hidden="true"></i>
+		</h1>
+		<input type="text" placeholder="Add new Todo">
 		<ul>
-			<li><span>X</span> Go to class</li>
-			<li><span>X</span> Play CSGO</li>
-			<li><span>X</span> Takeout</li>
+		<!-- Leaving it empty -->
 		</ul>
 	</div>
 
